# Peacekeeper

./: README.md  package-lock.json
server/: CMakeLists.txt  OnnixConvertion.py  main.cpp
server/logs/: Logger.h
web/: package-lock.json  package.json
web/back/peacekeeper/: build.gradle  settings.gradle
web/back/peacekeeper/src/main/java/com/peacekeeper/: PeacekeeperApplication.java
web/back/peacekeeper/src/main/resources/: application.properties
web/front/Peacekeeper/: package-lock.json  package.json  svelte.config.js
web/front/Peacekeeper/src/: app.html
web/front/Peacekeeper/src/lib/components/: AboutFooter.svelte  BrandLogo.svelte  Environments.svelte  Footer.svelte  Header.svelte  Hero.svelte  Navbar.svelte  PlanCard.svelte  Plans.svelte  ValidatedInput.svelte
web/front/Peacekeeper/src/lib/database/auth/: login.ts
web/front/Peacekeeper/src/lib/services/: auth-fetch.ts
web/front/Peacekeeper/src/lib/utils/: form-validation-rules.ts
web/front/Peacekeeper/src/routes/: +layout.svelte  +page.svelte  global.css
web/front/Peacekeeper/src/routes/(auth)/auth/: +layout.svelte  +page.svelte  global.css
web/front/Peacekeeper/src/routes/(dashboard)/dashboard/: +layout.svelte
web/front/Peacekeeper/src/routes/(web)/: +layout.svelte  +page.svelte
web/front/Peacekeeper/src/routes/(web)/services/: +page.svelte
web/front/Peacekeeper/src/routes/api/: +server.ts
web/front/Peacekeeper/src/routes/dashboard/: +layout.svelte
web/front/Peacekeeper/src/routes/plans/: +page.svelte
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/scripts/: seed.ts
(+8 files in other folders)
